--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,15 @@
   max-width: var(--max-width);
   box-sizing: border-box;
 
+  &.animated {
+    opacity: 0;
+    transition: opacity 300ms ease-out;
+  }
+
+  &.animated.show {
+    opacity: 1;
+  }
+
   &::after,
   &.tip-position-top::after {
     content: '';
